# vaery-unsupervised

./: .gitignore  README.md  pyproject.toml
vaery-unsupervised/dataloaders/: dataloader_km.py
vaery-unsupervised/scripts/: conversion_hdf5_to_zarr.py  nii-to-zarr.py
vaery_unsupervised/: _version.py  cli.py  cli_km.py  km_utils.py  minimal_plotly_2D_3D_example.py  minimal_tensorboard_3D_embedding_example.py  plotting_utils.py  run_marlin_contrastive.py
vaery_unsupervised/dataloaders/: MNISTDataModule.py  RM_dataloader.py  dataloader_km_ryans_template.py  dataloader_sixce.py  dataloader_testing_km.py  demo_dataloader.py  hcs_dataloader.py  hcs_dataloader_ryan.py  sal-brain-loader.py  sal_brain_loader.py  test_dataloader.py
vaery_unsupervised/microsplit/: microsplit_dataloader.py  utils.py
vaery_unsupervised/networks/: LightningVAE_linear_km.py  LitVAE.py  LitVAE_km.py  SalamanderVAE.py  VAE_3D_resnet18.py  contrastive.py  contrastive_sixce.py  hcs_contrastive.py  km_ryan_linearresnet.py  marlin_contrastive.py  marlin_custom_resnet.py  marlin_resnet.py  marlin_resnet_v2.py  marlin_utils.py  model.py  model_VAE_resnet18.py  model_VAE_resnet18_km.py
vaery_unsupervised/scripts/: conversion_hdf5_to_zarr.py  conversion_script.py  conversion_tiff2omezarr_RM.py  converting_km_spatial_data_to_zarr.py  dataloader_testing_km.py  embed_marlin.py  embed_marlin_v19.py  evaluate_marlin_contrastive.py  inference_automized  inference_automized_km  km_autoinference_simple.py  km_inference.py  km_inference_linearVAE.py  km_inference_shape_space.py  km_linearvae_training.py  km_plotting_shapes_images_interactive.py  (+14 more)
(+9 files in other folders)
